--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     addressmanagement.model:
-            class:        BiberLtd\Core\Bundles\AddressManagementBundle\Services\AddressManagementModel
+            class:        BiberLtd\Bundle\AddressManagementBundle\Services\AddressManagementModel
             arguments:    [@kernel, "default", "doctrine"]
