--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,15 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "biberltd/corebundle" : "self.version",
+        "biberltd/contactinformationbundle" : "self.version",
+        "biberltd/locationmanagement" : "self.version",
+        "biberltd/membermanagementbundle" : "self.version"
     },
     "autoload": {
-        "psr-0": { "BiberLtd\\AddressManagementBundle": "" }
+        "psr-0": { "BiberLtd\\Bundle\\AddressManagementBundle": "" }
 
     },
     "minimum-stability": "dev",
-    "target-dir": "BiberLtd/AddressManagementBundle"
+    "target-dir": "BiberLtd/Bundle/AddressManagementBundle"
 }
