--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         }
     ],
     "require": {
-        "biberltd/core-bundle" : "self.version",
-        "biberltd/contact-information-bundle" : "self.version",
-        "biberltd/location-management" : "self.version",
-        "biberltd/member-management-bundle" : "self.version"
+        "biberltd/core-bundle" : "~3.1",
+        "biberltd/contact-information-bundle" : "~3.1",
+        "biberltd/location-management" : "~3.1",
+        "biberltd/member-management-bundle" : "~3.1"
     },
     "autoload": {
         "psr-0": { "BiberLtd\\Bundle\\AddressManagementBundle": "" }
